arreglo admin y css

--- a/diseño/bimagenesusuario.html
+++ b/diseño/bimagenesusuario.html
@@ -81,13 +81,7 @@
                         </tr>
                     </table>
                 </div>        
-            <button id="volvermenu"><a href="login.html">MENU</a></button>
-            <button id="subir"><a href="opadmin.html">VOLVER</a></button>
-            <form method="POST" enctype="multipart/form-data" id="formsubir">
-                <input type="file" name="imagen" accept=".png,.jpg,.jpeg," multiple><br/>
-                <input type="submit" value="SUBIR">
-                <input type="submit" value="BORRAR">
-            </form>   
+            <button id="subir"><a href="mejoras.html">VOLVER</a></button> 
         </main>
     </body>
 </html>
