--- a/diseño/mejoras.html
+++ b/diseño/mejoras.html
@@ -10,55 +10,153 @@
     </head>
     <body>
         <main id="register-page">
-            <div id="div-superior">
+            <div class="div-superior">
                 <label><h1>Mejoras</h1></label>
             </div>
             <table border="1px"  id="tmejoras">
                 <tr>
-                    <th>Imagen</th>
-                    <th>Descripción</th>
-                    <th>Modificar</th>
-                    <th>Borrar</th>
-                </tr>
-                <tr>
                     <!-- Celda 1: Imagen -->
-                    <td><img src="../src/img/gato.png" alt="Descripción imagen"></td>
+                    <td>
+                        <img src="../src/img/gato.png" alt="Descripción imagen">
+                        <!-- Celda adicional para hacer clic y redirigir a bimagenes.html -->
+                        <br>
+                        <a href="bimagenesusuario.html" >
+                            <button id="bimagenesusuario">Cambiar Imagen</button>
+                        </a>
+                    </td>
                     <!-- Celda 2: Descripción -->
-                    <td>Es un gatito y esta disociativo</td>
-                    <!-- Celda 3: Botón Modificar -->
-                    <td><button><a href="modificarmejora.html">Modificar</a></button></td>
-                    <!-- Celda 4: Botón Borrar -->
+                    <td>
+                        <select>
+                            <option value="opcion1">Correr muy rápido</option>
+                            <option value="opcion2">Más punticos</option>
+                            <option value="opcion3">Limpieza automática</option>
+                        </select>
+                    </td> 
+                    <td>
+                        <input type="number" min="1" max="20" placeholder="Ingrese un número">
+                    </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
+                    <td>
+                        <input type="text" placeholder="Ingrese un porcentaje">                  
+                    </td>
+                    <!-- Celda 3: Botón Borrar -->
                     <td><button>Borrar</button></td>
                 </tr>
                 <tr>
-                    <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
-                    <td>Descripción de la fila 2</td>
-                    <td><button><a href="modificarmejora.html">Modificar</a></button></td>
+                    <td>
+                        <img src="../src/img/logo.jpg" alt="Descripción imagen">
+                        <br>
+                        <a href="bimagenesusuario.html" >
+                            <button id="bimagenesusuario">Cambiar Imagen</button>
+                        </a>
+                    </td>
+                    <td>
+                        <select>
+                            <option value="opcion1">Correr mu rapido</option>
+                            <option value="opcion2">Mas punticos</option>
+                            <option value="opcion3">Limpieza automatica</option>
+                        </select>
+                    </td> 
+                    <td>
+                        <input type="number" min="1" max="20" placeholder="Ingrese un número">
+                    </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
+                    <td>
+                        <input type="text" placeholder="Ingrese un porcentaje">                  
+                    </td>
                     <td><button>Borrar</button></td>
                 </tr> 
                 <tr>
-                    <td><img src="../src/img/foca.png" alt="Descripción imagen"></td>
-                    <td>Guillermo</td>
-                    <td><button><a href="modificarmejora.html">Modificar</a></button></td>
+                    <td><img src="../src/img/foca.png" alt="Descripción imagen">
+                        <br>
+                        <a href="bimagenesusuario.html" >
+                            <button id="bimagenesusuario">Cambiar Imagen</button>
+                        </a>
+                    </td>
+                    <td>
+                        <select>
+                            <option value="opcion1">Correr mu rapido</option>
+                            <option value="opcion2">Mas punticos</option>
+                            <option value="opcion3">Limpieza automatica</option>
+                        </select>
+                    </td> 
+                    <td>
+                        <input type="number" min="1" max="20" placeholder="Ingrese un número">
+                    </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
+                    <td>
+                        <input type="text" placeholder="Ingrese un porcentaje">                  
+                    </td>
                     <td><button>Borrar</button></td>
                 </tr>
                 <tr>
-                    <td><img src="../src/img/patatas.png" alt="Descripción imagen"></td>
-                    <td>La comida de Guillermo</td>
-                    <td><button><a href="modificarmejora.html">Modificar</a></button></td>
+                    <td><img src="../src/img/patatas.png" alt="Descripción imagen">
+                        <br>
+                        <a href="bimagenesusuario.html" >
+                            <button id="bimagenesusuario">Cambiar Imagen</button>
+                        </a>
+                    </td>
+                    <td>
+                        <select>
+                            <option value="opcion1">Correr mu rapido</option>
+                            <option value="opcion2">Mas punticos</option>
+                            <option value="opcion3">Limpieza automatica</option>
+                        </select>
+                    </td> 
+                    <td>
+                        <input type="number" min="1" max="20" placeholder="Ingrese un número">
+                    </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
+                    <td>
+                        <input type="text" placeholder="Ingrese un porcentaje">                  
+                    </td>
                     <td><button>Borrar</button></td>
                 </tr>
                 <!-- Repite las filas según sea necesario -->
                 <tr>
-                    <td><img src="../src/img/patatas.png" alt="Descripción imagen"></td>
-                    <td>La comida de Guillermo</td>
-                    <td><button><a href="modificarmejora.html">Modificar</a></button></td>
+                    <td><img src="../src/img/patatas.png" alt="Descripción imagen">
+                        <br>
+                        <a href="bimagenesusuario.html" >
+                            <button id="bimagenesusuario">Cambiar Imagen</button>
+                        </a>
+                    </td>
+                    <td>
+                        <select>
+                            <option value="opcion1">Correr mu rapido</option>
+                            <option value="opcion2">Mas punticos</option>
+                            <option value="opcion3">Limpieza automatica</option>
+                        </select>
+                    </td>
+                    <td>
+                        <input type="number" min="1" max="20" placeholder="Ingrese un número">
+                    </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
+                    <td>
+                        <input type="text" placeholder="Ingrese un porcentaje">                  
+                    </td> 
                     <td><button>Borrar</button></td>
                 </tr>
                 <tr>
-                    <td><img src="../src/img/foca.png" alt="Descripción imagen"></td>
-                    <td>Guillermo</td>
-                    <td><button><a href="modificarmejora.html">Modificar</a></button></td>
+                    <td><img src="../src/img/foca.png" alt="Descripción imagen">
+                        <br>
+                        <a href="bimagenesusuario.html" >
+                            <button id="bimagenesusuario">Cambiar Imagen</button>
+                        </a>
+                    </td>
+                    <td>
+                        <select>
+                            <option value="opcion1">Correr mu rapido</option>
+                            <option value="opcion2">Mas punticos</option>
+                            <option value="opcion3">Limpieza automatica</option>
+                        </select>
+                    </td> 
+                    <td>
+                        <input type="number" min="1" max="20" placeholder="Ingrese un número">
+                    </td>          
+                    <!-- Celda 4: Campo para porcentaje -->
+                    <td>
+                        <input type="text" placeholder="Ingrese un porcentaje">                  
+                    </td>
                     <td><button>Borrar</button></td>
                 </tr>
             </table>
