--- a/diseño/register.html
+++ b/diseño/register.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <main id="register-page">
-            <div id="div-superior">
+            <div class="div-superior">
                 <a href="index.html"><h1>REGISTRAR USUARIO</h1></a>
             </div>
-            <div id="div-inferior">
+            <div class="div-inferior">
                 <form>
                     <label for="nombre">Nombre</label>                 
                     <input type="text" id="nombre" name="nombre">
