--- a/diseño/index.html
+++ b/diseño/index.html
@@ -8,9 +8,9 @@
         <title>Trash invaders</title>
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">        
     </head>
-    <body>
+    <body id="index">
         <main id="landing-page">
-            <div id="div-superior">
+            <div class="div-superior" >
                 <div id="contenedor-imagen">
                     <img src="../src/img/logo.jpg" alt="logo-imagen">
                 </div>
@@ -18,7 +18,7 @@
                     <button><a href="register.html">Registro</a></button>
                 </div>
             </div>
-            <div id="div-inferior">
+            <div class="div-inferior">
                 <button><a href="login.html">Iniciar sesion</a></button>
             </div>
         </main>
