--- a/diseño/juego.html
+++ b/diseño/juego.html
@@ -10,9 +10,9 @@
     </head>
     <body>
         <main id="game-page">
-            <div id="div-superior">
+            <div class="div-superior">
             </div>  
-            <div id="div-inferior" class="grid-container">
+            <div class="div-inferior" id="grid-container">
                 <div class="grid-item">1</div>
                 <div class="grid-item">2</div>
                 <div class="grid-item">3</div>
