--- a/diseño/login.html
+++ b/diseño/login.html
@@ -10,13 +10,13 @@
     </head>
     <body>
         <main id="login-page">
-            <div id="div-superior">
+            <div class="div-superior">
                 <div id="contenedor-imagen">
                     <a href="index.html"><img src="../src/img/logo.jpg" alt="logo-imagen"></a>
                 </div>
             </div>
-            <div id="div-inferior">
-                <form action="menupusuario.html" method="post">
+            <div class="div-inferior">
+                <form action="menup.html" method="post">
                     <label for="username">Usuario</label>
                     <input type="text" id="username" name="username">
                     <br>
@@ -24,7 +24,7 @@
                     <input type="password" id="password" name="password">
                     <br>
                     <input type="submit" value="Iniciar Sesión">
-                    <button ><a href="menup.html" >TEMPORAL ADMIN</a></button>   
+                    <button ><a href="opadmin.html" >TEMPORAL ADMIN</a></button>   
                 </form>
             </div>
         </main>
