--- a/diseño/menup.html
+++ b/diseño/menup.html
@@ -10,13 +10,10 @@
     </head>
     <body>
         <main id="login-page">
-            <div id="div-superior">
+            <div class="div-superior">
                 <div id="contenedor-imagen">
                     <img src="../src/img/logo.jpg" alt="logo-imagen"></a>
                 </div>
-                <a href="opadmin.html" id="opadminimagen">
-                    <img src="../src/img/gato.png" alt="Descripción de la imagen para opadmin">
-                </a>
             </div>           
             <button ><a href="juego.html">JUGAR</a></button>
             <button ><a href="mejoras.html">MEJORAS</a></button>
