--- a/diseño/nuevamejora.html
+++ b/diseño/nuevamejora.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <main id="register-page">
-            <div id="div-superior">
+            <div class="div-superior">
                 <label><h1>Nueva Mejora</h1></label>
             </div>
             <table border="1" id="tmejoras">
