--- a/diseño/opadmin.html
+++ b/diseño/opadmin.html
@@ -10,30 +10,16 @@
     </head>
     <body>
         <main id="register-page">
-            <div id="div-superior">
+            <div class="div-superior">
                 <label><h1>Administrador</h1></label>
             </div>
-            <div id="div-inferior">
-                <form>
-                    <label for="vBasura">Velocidad de Basura</label>                   
-                    <input type="text" id="vBasura" name="vBasura">
-                    <br>
-                    <label for="frecuencia">Frecuencia</label>                   
-                    <input type="text" id="frecuencia" name="frecuencia">
-                    <br>
-                    <label for="tMaximo">Tiempo Maximo</label>                   
-                    <input type="text" id="tMaximo" name="tMaximo">
-                    <br>
-                    <label for="aparicion">Porcentajes de Aparicion de Mejoras</label>
-                    <input type="text" id="aparicion" name="aparicion">
-                    <br>
-                    <div id="mejoras">
-                        <button><a href="menup.html">ACEPTAR</a></button>
-                    </div>
-                    <button id="mejoras"><a href="bimagenes.html">Imagenes</a></button>
+            <div class="div-inferior">
+                <form id="opadmin">
+                    <button id="mejoras"><a href="opcionesadmin.html">Configuracion de Parametros</a></button>
+                    <button id="mejoras"><a href="bimagenes.html">Banco de Imagenes</a></button>
                 </form>
             </div>
-            <button id="volvermenu"><a href="menup.html">MENU</a></button>
+            <button id="volvermenu"><a href="login.html">MENU</a></button>
         </main>
     </body>
 </html>
