--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		<title>Trash Invaders</title>
 	</head>
 	<body>	  
-		<div id=divVista1>
+		<div id=divInicio>
             <main id="login-page">
                 <div id="div1">
                     <audio id="musica" controls loop>
@@ -33,7 +33,7 @@
             </main>
         </div>
 
-		<div id=divVista2>
+		<div id=divMenu>
 			<main id="login-page">
 				<div id="div1">
 					<div id="contenedor-imagen">
@@ -51,7 +51,7 @@
 			</main>
 
 		</div>
-		<div id=divVista3>
+		<div id=divJuego>
 
 			<main id="game-page">
 				<div id="div1">
