--- a/src/index.html
+++ b/src/index.html
@@ -5,49 +5,48 @@
 		<meta name=viewport content='width=device-width, initial-scale=1' />
 		<meta name="author" content="David, Antonio y Guillermo" />
 		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/new_style.css">
 		<title>Trash Invaders</title>
 	</head>
 	<body>	  
 		<div id=divInicio>
             <main id="login-page">
-                <div id="div1">
-                    <audio id="musica" controls loop>
-                        <source src="../src/img/guille.mp3" type="audio/mp3">
-                        Tu navegador no soporta el elemento de audio.
-                    </audio>
-
-                    <div id="contenedor-imagen">
-                        <img src="../src/img/logo.jpg" alt="logo-imagen">
-                    </div>
-                    <input type="text" name="usuario" id="usuario" placeholder="INTRODUCE TU USUARIO">
-                </div>
-                <div id="div2">
-                    <a class="enlace-como-boton">
-                        <button id="boton-inicio-sesion">INICIAR SESIÓN</button>
-                    </a>
-                    <a href="index.html" class="enlace-como-boton">
-                        <button id="boton-salir">SALIR</button>
-                    </a>
-                </div>
-            </main>
+				<div id="div-superior">
+					<div id="contenedor-imagen">
+						<a href="index.html"><img src="../src/img/logo.jpg" alt="logo-imagen"></a>
+					</div>
+				</div>
+				<div id="div-inferior">
+					<form action="menup.html" method="post">
+						<label for="username">Usuario</label>
+						<input type="text" id="username" name="username">
+						<br>
+						<label for="password">Contraseña</label>
+						<input type="password" id="password" name="password">
+						<br>
+						<input id="boton-inicio-sesion" type="submit" value="Iniciar Sesión">
+					</form>
+				</div>
+			</main>
         </div>
 
 		<div id=divMenu>
 			<main id="login-page">
-				<div id="div1">
+				<div id="div-superior">
 					<div id="contenedor-imagen">
-						<img src="../src/img/logo.jpg" alt="logo-imagen">
+						<img src="../src/img/logo.jpg" alt="logo-imagen"></a>
 					</div>
-					<button id="boton-jugar">JUGAR</button>
-				</div>  
-				<div id="div2">
-					<button id="boton-opciones">OPCIONES</button>
-					<button id="boton-clasificaciones">CLASIFICACIONES</button>
-					<a href="index.html" class="enlace-como-boton">
-						<button id="boton-salir">SALIR</button>
+					<a href="opadmin.html" id="opadminimagen">
+						<img src="../src/img/gato.png" alt="Descripción de la imagen para opadmin">
 					</a>
-				</div>				
+					<a href="mejoras.html" id="mejorasimagen">
+						<img src="../src/img/gato.png" alt="Descripción de la imagen para mejoras">
+					</a> 
+				</div>           
+				<button id="boton-jugar">JUGAR</button>
+				<button >OPCIONES</button>
+				<button >CLASIFICACIONES</a></button>
+				<button >SALIR</a></button>   
 			</main>
 
 		</div>
