--- a/diseño/mejoras.html
+++ b/diseño/mejoras.html
@@ -160,7 +160,7 @@
                     <td><button>Borrar</button></td>
                 </tr>
             </table>
-            <button id="volvermenu" ><a href="menup.html">MENU</a></button>
+            <button id="volvermenu" ><a href="menup.html">VOLVER</a></button>
             <button id="subir" ><a href="nuevamejora.html">NUEVA MEJORA</a></button>
         </main>
     </body>
