--- a/diseño/nuevamejora.html
+++ b/diseño/nuevamejora.html
@@ -38,7 +38,7 @@
                         </td>
                     </tr>
             </table>
-            <button id="volvermenu" ><a href="menup.html">MENU</a></button>
+            <button id="volvermenu" ><a href="mejoras.html">VOLVER</a></button>
             <button id="subir" ><a href="mejoras.html">ACEPTAR</a></button>
         </main>
     </body>
