Modificación en #contenedor-imagen y #login-page que ahora son clases.

--- a/diseño/index.html
+++ b/diseño/index.html
@@ -11,7 +11,7 @@
     <body id="index">
         <main id="landing-page">
             <div class="div-superior" >
-                <div id="contenedor-imagen">
+                <div class="contenedor-imagen">
                     <img src="../src/img/logo.jpg" alt="logo-imagen">
                 </div>
                 <div id="contenedor-boton-registro">
