--- a/diseño/old/login.html
+++ b/diseño/old/login.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <main id="login-page">
+    <main class="login-page">
     <div id="div1">
-            <div id="contenedor-imagen">
+            <div class="contenedor-imagen">
                 <img src="../src/img/logo.jpg" alt="logo-imagen">
             </div>    
         </div>  
