--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,14 @@
 	</head>
 	<body>	  
 		<div id=divVista1>
-            <main id="login-page">
+            <main class="login-page">
                 <div id="div1">
                     <audio id="musica" controls loop>
                         <source src="../src/img/guille.mp3" type="audio/mp3">
                         Tu navegador no soporta el elemento de audio.
                     </audio>
 
-                    <div id="contenedor-imagen">
+                    <div class="contenedor-imagen">
                         <img src="../src/img/logo.jpg" alt="logo-imagen">
                     </div>
                     <input type="text" name="usuario" id="usuario" placeholder="INTRODUCE TU USUARIO">
@@ -34,9 +34,9 @@
         </div>
 
 		<div id=divVista2>
-			<main id="login-page">
+			<main class="login-page">
 				<div id="div1">
-					<div id="contenedor-imagen">
+					<div class="contenedor-imagen">
 						<img src="../src/img/logo.jpg" alt="logo-imagen">
 					</div>
 					<button id="boton-jugar">JUGAR</button>
