--- a/diseño/menup.html
+++ b/diseño/menup.html
@@ -9,9 +9,9 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main id="login-page">
+        <main class="login-page">
             <div class="div-superior">
-                <div id="contenedor-imagen">
+                <div class="contenedor-imagen">
                     <img src="../src/img/logo.jpg" alt="logo-imagen"></a>
                 </div>
             </div>           
