--- a/diseño/old/index.html
+++ b/diseño/old/index.html
@@ -7,9 +7,9 @@
     <title>Inicio</title>
 </head>
 <body>
-    <main id="login-page">
+    <main class="login-page">
         <div id="div1">
-            <div id="contenedor-imagen">
+            <div class="contenedor-imagen">
                 <img src="../src/img/logo.jpg" alt="logo-imagen">
             </div>
             <button id="boton-inicio-sesion">JUGAR</button>
