CSS parcialmente revisado, hay que borrar cosas en deshuso

--- a/diseño/bimagenes.html
+++ b/diseño/bimagenes.html
@@ -9,11 +9,11 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main id="register-page">
+        <main class="register-page">
             <div class="div-superior">
                 <label><h1 id="h1imagenes">Banco de Imagenes</h1></label>
             </div>
-                <div id="tmejoras">
+                <div class="tmejoras">
                     <table border="1px" id="imagenestabla">
                         <tr>
                             <td><img src="../src/img/logo.jpg" alt="Descripción imagen"></td>
