--- a/diseño/mejoras.html
+++ b/diseño/mejoras.html
@@ -9,11 +9,11 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main id="register-page">
+        <main class="register-page">
             <div class="div-superior">
                 <label><h1>Mejoras</h1></label>
             </div>
-            <table border="1px"  id="tmejoras">
+            <table border="1px"  class="tmejoras">
                 <tr>
                     <!-- Celda 1: Imagen -->
                     <td>
