--- a/diseño/old/game.html
+++ b/diseño/old/game.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <main id="game-page">
-        <div id="div1">
+        <div class="div1">
         </div>  
-        <div id="div2" class="grid-container">
+        <div class="div2" class="grid-container">
             <div class="grid-item">1</div>
             <div class="grid-item">2</div>
             <div class="grid-item">3</div>
