--- a/diseño/old/index.html
+++ b/diseño/old/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <main class="login-page">
-        <div id="div1">
+        <div class="div1">
             <div class="contenedor-imagen">
                 <img src="../src/img/logo.jpg" alt="logo-imagen">
             </div>
             <button id="boton-inicio-sesion">JUGAR</button>
         </div>  
-        <div id="div2">
+        <div class="div2">
             <button id="boton-inicio-sesion">OPCIONES</button>
             <button id="boton-inicio-sesion">CLASIFICACIONES</button>
             <a href="login.html" class="enlace-como-boton">
