--- a/diseño/old/login.html
+++ b/diseño/old/login.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <main class="login-page">
-    <div id="div1">
+    <div class="div1">
             <div class="contenedor-imagen">
                 <img src="../src/img/logo.jpg" alt="logo-imagen">
             </div>    
         </div>  
-        <div id="div2">
+        <div class="div2">
             <form action="">
                 <label for="usuario">Usuario:</label>
                 <input type="text" name="usuario" id="usuario" placeholder="INTRODUCE TU USUARIO">
