--- a/diseño/opadmin.html
+++ b/diseño/opadmin.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main id="register-page">
+        <main class="register-page">
             <div class="div-superior">
                 <label><h1>Administrador</h1></label>
             </div>
