--- a/diseño/register.html
+++ b/diseño/register.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main id="register-page">
+        <main class="register-page">
             <div class="div-superior">
                 <a href="index.html"><h1>REGISTRAR USUARIO</h1></a>
             </div>
