--- a/diseño/clasificaciones.html
+++ b/diseño/clasificaciones.html
@@ -9,11 +9,11 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main id="register-page">
+        <main class="register-page">
             <div class="div-superior">
                 <label><h1>CLASIFICACION</h1></label>
             </div>
-            <table border="1" id="tmejoras">
+            <table border="1" class="tmejoras">
                 <thead>
                     <tr>
                         <th>Número</th>
