--- a/diseño/nuevamejora.html
+++ b/diseño/nuevamejora.html
@@ -9,11 +9,11 @@
         <link rel="icon" type="image/png" href="../src/img/logo.jpg">
     </head>
     <body>
-        <main id="register-page">
+        <main class="register-page">
             <div class="div-superior">
                 <label><h1>Nueva Mejora</h1></label>
             </div>
-            <table border="1" id="tmejoras">
+            <table border="1" class="tmejoras">
                     <tr>
                         <!-- Celda 1: Campo para hacer clic y elegir una imagen -->
                         <td>
