--- a/diseño/old/register.html
+++ b/diseño/old/register.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <main id="admin-page">
-        <div id="div1">
+        <div class="div1">
             <h1>REGISTRAR USUARIO</h1>
         </div>  
-        <div id="div2">
+        <div class="div2">
             <form action="">
                 <div class="form-admin-parameters">
                     <label for="velocidad-basura">Velocidad Basura</label>
