--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<body>	  
 		<div id=divVista1>
             <main class="login-page">
-                <div id="div1">
+                <div class="div1">
                     <audio id="musica" controls loop>
                         <source src="../src/img/guille.mp3" type="audio/mp3">
                         Tu navegador no soporta el elemento de audio.
@@ -22,7 +22,7 @@
                     </div>
                     <input type="text" name="usuario" id="usuario" placeholder="INTRODUCE TU USUARIO">
                 </div>
-                <div id="div2">
+                <div class="div2">
                     <a class="enlace-como-boton">
                         <button id="boton-inicio-sesion">INICIAR SESIÓN</button>
                     </a>
@@ -35,13 +35,13 @@
 
 		<div id=divVista2>
 			<main class="login-page">
-				<div id="div1">
+				<div class="div1">
 					<div class="contenedor-imagen">
 						<img src="../src/img/logo.jpg" alt="logo-imagen">
 					</div>
 					<button id="boton-jugar">JUGAR</button>
 				</div>  
-				<div id="div2">
+				<div class="div2">
 					<button id="boton-opciones">OPCIONES</button>
 					<button id="boton-clasificaciones">CLASIFICACIONES</button>
 					<a href="index.html" class="enlace-como-boton">
@@ -54,9 +54,9 @@
 		<div id=divVista3>
 
 			<main id="game-page">
-				<div id="div1">
+				<div class="div1">
 				</div>  
-				<div id="div2" class="grid-container">
+				<div class="div2" class="grid-container">
 					<div class="grid-item">1</div>
 					<div class="grid-item">2</div>
 					<div class="grid-item">3</div>
