Cambios y comentado sobre el CSS y los diseños HTML implicados

--- a/diseño/bimagenes.html
+++ b/diseño/bimagenes.html
@@ -81,8 +81,8 @@
                         </tr>
                     </table>
                 </div>        
-            <button id="volvermenu"><a href="login.html">MENU</a></button>
-            <button id="subir"><a href="opadmin.html">VOLVER</a></button>
+            <button class="volvermenu"><a href="login.html">MENU</a></button>
+            <button class="subir"><a href="opadmin.html">VOLVER</a></button>
             <form method="POST" enctype="multipart/form-data" id="formsubir">
                 <input type="file" name="imagen" accept=".png,.jpg,.jpeg," multiple><br/>
                 <input type="submit" value="SUBIR">
