--- a/diseño/bimagenesusuario.html
+++ b/diseño/bimagenesusuario.html
@@ -81,7 +81,7 @@
                         </tr>
                     </table>
                 </div>        
-            <button id="subir"><a href="mejoras.html">VOLVER</a></button> 
+            <button class="subir"><a href="mejoras.html">VOLVER</a></button> 
         </main>
     </body>
 </html>
