--- a/diseño/clasificaciones.html
+++ b/diseño/clasificaciones.html
@@ -58,7 +58,7 @@
                     </tr>
                 </tbody>
             </table>
-            <button id="volvermenu" ><a href="menup.html">MENU</a></button>
+            <button class="volvermenu" ><a href="menup.html">MENU</a></button>
         </main>
     </body>
 </html>
