--- a/diseño/mejoras.html
+++ b/diseño/mejoras.html
@@ -160,8 +160,8 @@
                     <td><button>Borrar</button></td>
                 </tr>
             </table>
-            <button id="volvermenu" ><a href="menup.html">VOLVER</a></button>
-            <button id="subir" ><a href="nuevamejora.html">NUEVA MEJORA</a></button>
+            <button class="volvermenu" ><a href="menup.html">VOLVER</a></button>
+            <button class="subir" ><a href="nuevamejora.html">NUEVA MEJORA</a></button>
         </main>
     </body>
 </html>
