--- a/diseño/nuevamejora.html
+++ b/diseño/nuevamejora.html
@@ -38,8 +38,8 @@
                         </td>
                     </tr>
             </table>
-            <button id="volvermenu" ><a href="mejoras.html">VOLVER</a></button>
-            <button id="subir" ><a href="mejoras.html">ACEPTAR</a></button>
+            <button class="volvermenu" ><a href="mejoras.html">VOLVER</a></button>
+            <button class="subir" ><a href="mejoras.html">ACEPTAR</a></button>
         </main>
     </body>
 </html>
