--- a/diseño/opcionesadmin.html
+++ b/diseño/opcionesadmin.html
@@ -32,8 +32,8 @@
                     </div>
                 </form>
             </div>
-            <button id="volvermenu"><a href="login.html">MENU</a></button>
-            <button id="subir"><a href="opadmin.html">VOLVER</a></button>
+            <button class="volvermenu"><a href="login.html">MENU</a></button>
+            <button class="subir"><a href="opadmin.html">VOLVER</a></button>
         </main>
     </body>
 </html>
