--- a/diseño/modificarmejora.html
+++ b/diseño/modificarmejora.html
@@ -38,8 +38,8 @@
                         </td>
                     </tr>
             </table>
-            <button id="volvermenu" ><a href="menup.html">MENU</a></button>
-            <button id="subir" ><a href="mejoras.html">ACEPTAR</a></button>
+            <button class="volvermenu" ><a href="menup.html">MENU</a></button>
+            <button class="subir" ><a href="mejoras.html">ACEPTAR</a></button>
         </main>
     </body>
 </html>
