--- a/diseño/opadmin.html
+++ b/diseño/opadmin.html
@@ -20,7 +20,7 @@
                 </form>
 
             </div>
-            <button id="volvermenu"><a href="login.html">MENU</a></button>
+            <button class="volvermenu"><a href="login.html">MENU</a></button>
 
         </main>
         
