--- a/diseño/bimagenesusuario.html
+++ b/diseño/bimagenesusuario.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="../src/css/new_style.css">
         <meta name="author" content="David, Antonio y Guillermo" />
         <title>Banco de Imagenes</title>
